<?xml version="1.0"?>
<package format="2">
  <name>decadarobotics_devtest</name>
  <version>1.0.0</version>
  <description>Package of scripts for decadarobotics dev and testing launch</description>
  <maintainer email="siotrobotics@gmail.com">Decada Robotics</maintainer>

  <license>Apache 2.0</license>
  <author email="scottcjx.w@gmail.com">Scott CJX</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>adhoc_simulations</depend>
  <exec_depend>caato</exec_depend>

</package>
